Vertical align to add breadcrumbs as IE7 fix

--- a/sass/framework/partials/objects/_breadcrumbs.scss
+++ b/sass/framework/partials/objects/_breadcrumbs.scss
@@ -35,6 +35,7 @@
 	  	padding: 0.7em 1em;
 		text-decoration: none;
 		@include inline-block;		
+		vertical-align: middle;
 	}
 
 	// Current item
